--- a/client/src/app/hosts/container.html
+++ b/client/src/app/hosts/container.html
@@ -1,30 +1,44 @@
 <div ng-controller="ContainerController">
-    <p>
-        {{ container.Id | limitTo:12 }} <br/>
-        {{ container.Image }} <br/>
-        {{ container.Names }} <br/>
-        {{ container.Status }} <br/>
-    </p>
-    <p>
-        <button ng-click="start()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-play"></span>
-        </button> &nbsp;
-        <button ng-click="stop()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-stop"></span>
-        </button> &nbsp;
-        <button ng-click="restart()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-repeat"></span>
-        </button> &nbsp; | &nbsp;
-        <button ng-click="remove()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-remove"></span>
-        </button>
-    </p>
-    <p>
-        <button ng-click="showLogs()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-console"></span>
-        </button> &nbsp;
-        <button ng-click="showInfo()" type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-info-sign"></span>
-        </button>
-    </p>
+
+    <div class="pull-right">
+        <div class="dropdown">
+            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li role="presentation" ng-click="start()">
+                    <a role="menuitem" tabindex="-1" href="">Start</a>
+                </li>
+                <li role="presentation" ng-click="stop()">
+                    <a role="menuitem" tabindex="-1" href="">Stop</a>
+                </li>
+                <li role="presentation" ng-click="restart()">
+                    <a role="menuitem" tabindex="-1" href="">Restart</a>
+                </li>
+                <li role="presentation" class="divider"></li>
+                <li role="presentation" ng-click="showLogs()">
+                    <a role="menuitem" tabindex="-1" href="">Show Logs</a>
+                </li>
+                <li role="presentation" ng-click="showInfo()">
+                    <a role="menuitem" tabindex="-1" href="">Show Info</a>
+                </li>
+                <li role="presentation" class="divider"></li>
+                <li role="presentation" ng-click="remove()">
+                    <a role="menuitem" tabindex="-1" href="">Remove</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <span ng-repeat="name in container.Names">
+        <label>{{ name }}</label>
+        {{ $last ? '' : ' ' }}
+    </span> <br/>
+    {{ container.Image }} <br/>
+    <span ng-repeat="port in container.Ports">
+        {{ port.PublicPort }}:{{ port.PrivatePort }}
+        {{ $last ? '' : ' ' }}
+    </span> <br/>
+    {{ container.Status }} <br/>
+
 </div>
