--- a/client/src/app/hosts/container.html
+++ b/client/src/app/hosts/container.html
@@ -35,7 +35,7 @@
             <label>{{ name }}</label>
             {{ $last ? '' : ' ' }}
         </span> <br/>
-        {{ container.Image }} <br/>
+        {{ container.Image | dockerImageName }} <br/>
         {{ container.Status }}
     </p>
 
