--- a/client/src/app/sync/sync.html
+++ b/client/src/app/sync/sync.html
@@ -43,8 +43,9 @@
                 onLoad: aceLoaded
             }"></div>
             <br/>
+            <button ng-click="create()" class="btn btn-info">Create</button>
             <div class="pull-right">
-                <button ng-click="update()" class="btn btn-primary">Update</button>
+                <button ng-click="update()" class="btn btn-default">Update</button>
             </div>
         </div>
     </div>
