The list of hosts was updated. Private IP is displayed. DNS is no longer used. Pulling images with X-Registry-Auth is supported.

--- a/client/src/app/hosts/host.html
+++ b/client/src/app/hosts/host.html
@@ -45,7 +45,7 @@
             <li class="list-group-item">
                 IP
                 <div class="pull-right">
-                    {{ host.network.public_ip }}
+                    {{ host.network.public_ip }} / {{ host.network.private_ip }}
                 </div>
             </li>
         </ul>
