New worker was added.

--- a/client/src/app/hosts/hosts.html
+++ b/client/src/app/hosts/hosts.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
         <div class="col-md-3" ng-repeat="host in hosts" ng-hide="layout_horizontal">
-            <div ng-include="'/app/hosts/host.html'"></div>
+            <div ng-include="'/app/hosts/host-vertical.html'"></div>
         </div>
     </div>
 </div>
